--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>concertSpots</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
 </head>
 <body>
-    <nav>
-        <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'about' %}">About</a>
-        <a href="{% url 'index' %}">My Tickets</a>
-        <a href="{% url 'tickets_create' %}">My Tickets</a>
-    </nav>  
+    <nav class="navbar navbar-expand navbar-dark bg-primary">
+        <div class="container">
+            <a href="#" class="navbar-brand">concertSpots</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{% url 'home' %}" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'about' %}" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'index' %}" class="nav-link">My Tickets</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'tickets_create' %}" class="nav-link">New Tickets </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'concerts' %}" class="nav-link">Concerts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'concerts' %}" class="nav-link"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     {% block content %}
     {% endblock %}
 </body>
