--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,15 +23,12 @@
                 <li class="nav-item">
                     <a href="{% url 'index' %}" class="nav-link">My Tickets</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a href="{% url 'tickets_create' %}" class="nav-link">New Tickets </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a href="{% url 'concerts' %}" class="nav-link">Concerts</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'concerts' %}" class="nav-link"></a>
-                </li>
+                </li>   
             </ul>
         </div>
     </nav>
