--- a/main_app/templates/main_app/ticket_form.html
+++ b/main_app/templates/main_app/ticket_form.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<h1>{{ concert }}</h1>
+
 <form action="" method="POST">
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit!">
-  </form>
+  <!-- Django requires the following for security purposes -->
+  {% csrf_token %}
+  <table>
+    <!-- Render the inputs inside of <tr>s & <td>s -->
+    {{ form.as_table }}
+  </table>
+  <input type="submit" value="Buy Ticket" class="btn">
+</form>
 
 {% endblock %}
