Add to search function

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,7 +15,7 @@
             <a href="#" class="navbar-brand">concertSpots</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="{% url 'home' %}" class="nav-link">Home</a>
+                    <a href="{% url 'home' %}" class="nav-link" id="home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'about' %}" class="nav-link">About</a>
@@ -24,7 +24,7 @@
                     <a href="{% url 'index' %}" class="nav-link">My Tickets</a>
                 </li>
                 <!-- <li class="nav-item">
-                    <a href="{% url 'tickets_create' %}" class="nav-link">New Tickets </a>
+                    <a href="{% url 'ticket_create' %}" class="nav-link">New Tickets </a>
                 </li> -->
                 <li class="nav-item">
                     <a href="{% url 'concerts' %}" class="nav-link">Concerts</a>
