--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,6 +14,7 @@
         <div class="container">
             <a href="#" class="navbar-brand">concertSpots</a>
             <ul class="navbar-nav">
+                {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a href="{% url 'home' %}" class="nav-link" id="home">Home</a>
                 </li>
@@ -28,7 +29,21 @@
                 </li> -->
                 <li class="nav-item">
                     <a href="{% url 'concerts' %}" class="nav-link">Concerts</a>
-                </li>   
+                </li>
+                <li class="nav-item login">
+                    <a href="{% url 'logout' %}" class="nav-link">Log Out</a>
+                </li>
+                {% else %} 
+                <li class="nav-item">
+                    <a href="{% url 'home' %}" class="nav-link" id="home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'about' %}" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'login' %}" class="nav-link">Log In</a>
+                </li>
+                {% endif %}  
             </ul>
         </div>
     </nav>
