Add to search functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,13 +21,10 @@
                     <a href="{% url 'about' %}" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'index' %}" class="nav-link">My Tickets</a>
+                    <a href="{% url 'ticket_index' %}" class="nav-link">My Tickets</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="{% url 'ticket_create' %}" class="nav-link">New Tickets </a>
-                </li> -->
                 <li class="nav-item">
-                    <a href="{% url 'concerts' %}" class="nav-link">Concerts</a>
+                    <a href="{% url 'search' %}" class="nav-link">Find Shows</a>
                 </li>   
             </ul>
         </div>
