--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>About</h1>
+  <h1>About concertSpots</h1>
+  <hr />
+  <footer>All Rights Reserved, &copy; 2022 concertSpots</footer>  
 
 {% endblock %}
