--- a/main_app/templates/tickets/detail.html
+++ b/main_app/templates/tickets/detail.html
@@ -1,11 +1,18 @@
 {% extends 'base.html' %}
+
 {% block content %}
-
-<h1>Details: </h1>
-<p>{{ ticket.event_name }}</p>
-<p>Price: ${{ ticket.price }}</p>
-<p>{{ ticket.location }}</p>
-<p>{{ ticket.date }}</p>
-<a href="{% url 'ticket_delete' ticket.id %}">Delete</a>
-
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h1 class="text-center mb-4" style="color: #00BCF8;">Details:</h1>
+        <p class="text-center mb-3" style="font-size: 20px; font-weight: 500;">{{ ticket.event_name }}</p>
+        <p class="text-center mb-3">Price: ${{ ticket.price }}</p>
+        <p class="text-center mb-3">{{ ticket.location }}</p>
+        <p class="text-center mb-4">{{ ticket.date }}</p>
+        <div class="d-flex justify-content-center">
+          <a href="{% url 'ticket_delete' ticket.id %}" class="btn btn-danger mr-2">Delete</a>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
