--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>About concertSpots</h1>
+<h1 class="text-center mb-4" style="color: #00BCF8;">About</h1>
   <hr />
   <footer>All Rights Reserved, &copy; 2022 concertSpots</footer>  
 
