--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Home</h1>
+<h1 class="text-center mb-4" style="color: #00BCF8;">Home</h1>
 
 {% endblock %}
