--- a/main_app/templates/main_app/ticket_confirm_delete.html
+++ b/main_app/templates/main_app/ticket_confirm_delete.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Delete Ticket</h1>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h1 class="text-center mb-4" style="color: #00BCF8;">Delete Ticket</h1>
 
-  <h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
+        <h4 class="text-center mb-4">Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
 
-  <form action="" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'ticket_detail' ticket.id %}">Cancel</a>
-  </form>
+        <form action="" method="POST" class="text-center">
+          {% csrf_token %}
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-danger mr-2" style="margin-right: 10px;">Yes - Delete!</button>
+            <a href="{% url 'ticket_detail' ticket.id %}" class="btn btn-outline-secondary" style="background-color: #0087BF; color: #FFFFFF; margin-left: 10px;">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
