--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,9 +1,19 @@
-<h1>Log In</h1>
+{% extends 'base.html' %}
 
-<!-- Add the login form -->
-<form method="POST" action="{% url 'login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="hidden" name="next" value="{{ next }}">
-  <button type="submit" class="btn">Log In</button>
-</form>
+{% block content %}
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h1 class="text-center mb-4">Log In</h1>
+
+        <form method="POST" action="{% url 'login' %}" class="text-center">
+          {% csrf_token %}
+          {{ form.as_p }}
+
+          <input type="hidden" name="next" value="{{ next }}">
+          <button type="submit" class="btn btn-primary btn-block mt-4">Log In</button>
+        </form>
+      </div>
+    </div>
+  </div>
+{% endblock %}
