--- a/main_app/templates/concerts/detail.html
+++ b/main_app/templates/concerts/detail.html
@@ -6,7 +6,7 @@
 
 <form action="{% url 'ticket_index' %}" method="POST">
     {% csrf_token %}
-    <button type="submit">Buy Ticket</button>
+    <button type="submit">Add to Cart</button>
 </form>
 
 {% endblock %}
