--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -13,6 +13,7 @@
           <input type="hidden" name="next" value="{{ next }}">
           <button type="submit" class="btn btn-primary btn-block mt-4">Log In</button>
         </form>
+        <p class="mt-3 text-center">Don't have an account? <a href="{% url 'signup' %}" class="btn btn-link">Sign up</a></p>
       </div>
     </div>
   </div>
