--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -5,6 +5,7 @@ body {
 nav {
     height: 12vmin;
     font-size: 3vmin;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
 .concert-name-container {
