--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -1,10 +1,18 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 nav {
-    height: 12vmin;
-    font-size: 3vmin;
+    height: 8vmin;
+    font-size: 2.4vmin;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    transition: .2s;
+}
+
+h1 {
+  margin-top: 8vmin;
+  font-size: 6.5vmin;
+  width: 120vmin
 }
 
 .concert-name-container {
@@ -17,5 +25,23 @@ nav {
   width: 100px;
   height: 100px;
   object-fit: cover; 
-  border-radius: 50%; 
+}
+
+.navbar-scrolled {
+  background-color: white;
+  color: purple;
+}
+
+#search-btn {
+  margin-left: 1.5vmin;
+}
+
+#drop-down {
+  margin-top: -1vmin;
+  width: 32vmin
+}
+
+#cart {
+  width: 5vmin;
+  border-radius: 100%;
 }
