--- a/main_app/templates/concerts/search.html
+++ b/main_app/templates/concerts/search.html
@@ -4,27 +4,27 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1 class="text-center mb-4" style="color: #00BCF8;">Concerts</h1>
-      <a href="{% url 'concerts_index' %}" style="color: #0087BF;">View Recent Searches</a>
+      <h1 class="text-center mb-4" style="color: #00BCF8;">Find your favorite upcoming shows</h1>
 
       <h2 class="mt-5 mb-3" style="color: #0087BF;">Search Concerts</h2>
       <form action="{% url 'search' %}" method="POST">
         {% csrf_token %}
-        <label for="">Search By</label>
-        <select name="sort">
-          <option value="default"></option>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" name="name" placeholder="Search...">
+          <div class="input-group-append">
+            <button id="search-btn" class="btn btn-outline-secondary" type="submit" style="background-color: #763500; color: #FFFFFF;">SEARCH</button>
+          </div>
+        </div>
+        <select id="drop-down" class="form-select" name="sort">
+          <option value="default">Search by...</option>
           <option value="asc_name">Sort by Name(A-Z)</option>
           <option value="dsc_name">Sort by Name(Z-A)</option>
           <option value="asc_price">Sort by Price(Highest-Lowest)</option>
           <option value="dsc_price">Sort by Price(Lowest-Highest)</option>
         </select>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" name="name" placeholder="Search...">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="submit" style="background-color: #763500; color: #FFFFFF;">SEARCH</button>
-          </div>
-        </div>
       </form>
+
+      <a href="{% url 'concerts_index' %}" style="color: #0087BF;">View Recent Searches</a>
 
 
       {% if concerts %}
