--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="text-center mb-4" style="color: #00BCF8;">Home</h1>
+<main id="home">
+    <div>
+        <h1 class="text-center mb-4" style="color: #00BCF8;">Experience Live Music with Ease Using concertSpots</h1>
+        <p>Our platform is designed to make the ticket buying process easy, efficient, and stress-free. With just a few clicks, you can browse available concerts, select your seats and purchase your tickets securely. So sit back, relax, and get ready to experience the thrill of live music with<span>concertSpots.</span></p>
+    </div>
+    <img src="https://images.pexels.com/photos/2147029/pexels-photo-2147029.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+</main>
 
 {% endblock %}
