--- a/main_app/templates/main_app/ticket_confirm_delete.html
+++ b/main_app/templates/main_app/ticket_confirm_delete.html
@@ -4,7 +4,7 @@
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <h1 class="text-center mb-4" style="color: #00BCF8;">Delete Ticket</h1>
+        <h1 class="text-center mb-4" style="color: #00BCF8; width: 100vmin">Delete Ticket</h1>
 
         <h4 class="text-center mb-4">Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
 
