--- a/main_app/templates/tickets/detail.html
+++ b/main_app/templates/tickets/detail.html
@@ -4,7 +4,8 @@
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <h1 class="text-center mb-4" style="color: #00BCF8;">Details:</h1>
+        <h1 class="text-center mb-2" style="color: #00BCF8; width: 100vmin" >Details:</h1>
+        <br>
         <p class="text-center mb-3" style="font-size: 20px; font-weight: 500;">{{ ticket.event_name }}</p>
         <p class="text-center mb-3">Price: ${{ ticket.price }}</p>
         <p class="text-center mb-3">{{ ticket.location }}</p>
