--- a/main_app/templates/tickets/index.html
+++ b/main_app/templates/tickets/index.html
@@ -1,19 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
 
+{% if tickets %}
+
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1 class="text-center mb-4" style="color: #00BCF8;">Tickets</h1>
+      <h1 class="text-center mb-4" style="color: #00BCF8;">My Tickets</h1>
 
       {% for ticket in tickets %}
         <div class="card mb-3">
           <div class="card-body">
-            <h5 class="card-title">Ticket Number: {{ ticket.number }}</h5>
+            <h5 class="card-title">{{ ticket.event_name }}</h5>
+            <h6 class="card-subtitle">{{ ticket.date }}</h6>
+            <br>
             <a href="{% url 'ticket_detail' ticket.id %}" class="btn btn-primary">Details</a>
           </div>
         </div>
       {% endfor %}
+
+{% else %}
+<h1 class="text-center mb-4" style="color: #00BCF8;">No tickets yet...</h1>
+
+
+{% endif %}
       
     </div>
   </div>
