--- a/main_app/templates/checkout/cart.html
+++ b/main_app/templates/checkout/cart.html
@@ -16,7 +16,8 @@
 
 <form action="{% url 'checkout'  %}" method="POST">
     {% csrf_token %}
-    <button type="submit">Buy Tickets</button>
+    <button type="submit" name="empty" value="Empty Cart">Empty Cart</button>
+    <button type="submit" name="buy" value="Buy Tickets">Buy Tickets</button>
 </form>
 
 {% endblock %}
