--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="text-center mb-4" style="color: #00BCF8;">About</h1>
-<h2>Welcome to concertSpots! We are excited to offer you a seamless and convenient way to purchase tickets for your favorite concerts from the comfort of your own home.
-<ul>
-  <li>Robust and reliable platform - Investing in a robust and reliable platform that can handle high traffic volumes and minimize technical issues can ensure that fans have a smooth ticket buying experience</li>
-  <li>Transparent pricing - Providing transparent pricing with no hidden fees can help fans know exactly what they will pay for their tickets </li>
-  <li>Seat maps and selection - Providing a seat map with real-time seat availability and the ability to filter by price, section, or row can help fans easily find and select the best available seats.</li>
-</ul>
-</h2>
-  <hr />
-  <footer>All Rights Reserved, &copy; 2022 concertSpots</footer>  
+<div id="about">
+  <h1 class="text-center mb-4" style="color: #00BCF8; margin-top: 12vmin; width: 170vmin">About</h1>
+  <h2>Welcome to <span>concertSpots</span>! We are excited to offer you a seamless and convenient way to purchase tickets for your favorite concerts from the comfort of your own home.</h2>
+  <br>
+  <ul>
+    <li>Robust and reliable platform - Investing in a robust and reliable platform that can handle high traffic volumes and minimize technical issues can ensure that fans have a smooth ticket buying experience</li>
+    <li>Transparent pricing - Providing transparent pricing with no hidden fees can help fans know exactly what they will pay for their tickets </li>
+    <br> 
+    <footer><hr />All Rights Reserved, &copy; 2022 concertSpots</footer> 
+</div>
 
 {% endblock %}
