--- a/main_app/templates/checkout/cart.html
+++ b/main_app/templates/checkout/cart.html
@@ -1,23 +1,43 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>My Cart</h1>
+<div id="checkout">
+    <h1 class="text-center mb-2" style="color: #00BCF8; width: 30vmin" >My Cart</h1>
+    <br>
 
-{% for item in items %}
+    {% if items %}
 
-<ul>
-    <li>
-        {{ item.event_name }}
-        <a href="{% url 'ticket_delete' item.id %}">Remove Item from cart</a>
-    </li>
-</ul>
+    {% for item in items %}
 
-{% endfor %}
 
-<form action="{% url 'checkout'  %}" method="POST">
-    {% csrf_token %}
-    <button type="submit" name="empty" value="Empty Cart">Empty Cart</button>
-    <button type="submit" name="buy" value="Buy Tickets">Buy Tickets</button>
-</form>
+    <ul>
+        <li>
+            {{ item.event_name }} - ${{ item.price }}
+                <form action="{% url 'cart' %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" name="delete" value="{{ item.id }}" class="btn btn-primary" style="background-color: #0087BF; border-color: #0087BF;">Remove Item</button>
+                </form>
+        </li>
+    </ul>
+
+    {% endfor %}
+
+    <h3>Total: ${{ total }} </h3>
+
+    {% else %}
+
+    <p>No items in cart yet...</p>
+
+    {% endif %}
+
+
+    <form action="{% url 'checkout' %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" name="empty" value="Empty Cart" class="btn btn-primary" style="background-color: #0087BF; border-color: #0087BF;">Empty Cart</button>
+        <button type="submit" name="buy" value="Buy Tickets" class="btn btn-primary" style="background-color: #0087BF; border-color: #0087BF;">Buy Tickets</button>
+    </form>
+
+</div>
+
 
 {% endblock %}
