--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div id="sign-up">
   <h2>Sign up</h2>
   <form method="post">
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}"
+    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
     {{ form.as_p }}
     <button type="submit">Sign up</button>
   </form>
+</div>
 {% endblock %}
