--- a/main_app/templates/tickets/index.html
+++ b/main_app/templates/tickets/index.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1 class="text-center mb-4" style="color: #00BCF8;">My Tickets</h1>
+      <h1 class="text-center mb-4" style="color: #00BCF8; width: 100vmin;">My Tickets</h1>
 
       {% for ticket in tickets %}
         <div class="card mb-3">
